# casadi

./: CMakeLists.txt
casadi/interfaces/proxqp/: CMakeLists.txt
casadi/interfaces/qpoases/: qpoases_interface.hpp
